// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/UI Render is fine 1`] = `
<div>
  <div
    class="sc-86fc186b-0 fdUrvC"
  >
    <label
      class="sc-f296cf62-0 ewMWJz"
      for="phone"
    >
      Phone
    </label>
    <input
      autocomplete="off"
      name="phone"
      type="text"
      value=""
    />
    <div
      class="sc-98140c93-0 hmmwvB"
    >
      <span>
        Your phone is not correct
      </span>
    </div>
  </div>
</div>
`;

exports[`Input/UI Type masked phone number is fine 1`] = `
<div>
  <div
    class="sc-86fc186b-0 edSOQW"
  >
    <label
      class="sc-f296cf62-0 ewMWJz"
      for="phone"
    >
      Phone
    </label>
    <input
      autocomplete="off"
      name="phone"
      type="text"
      value=""
    />
  </div>
</div>
`;
